--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,7 +8,7 @@
     <string name="nav_schedule_title">Schedule</string>
     <string name="drawer_open">Drawer open</string>
     <string name="drawer_close">Drawer close</string>
-    <string name="player_image_content_description">Player image</string>
+    <string name="player_image_content_description">Player imageModel</string>
     <string name="label_age_text">Age:</string>
     <string name="label_position_text">Position:</string>
     <string name="label_appearances_text">Appearances:</string>
