--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -28,4 +28,5 @@
     <string name="goal_difference">GD</string>
     <string name="facebook_app_id">770172329847519</string>
     <string name="title_activity_maps">Map</string>
+    <string name="versus">VS</string>
 </resources>
