--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,4 +29,8 @@
     <string name="facebook_app_id">770172329847519</string>
     <string name="title_activity_maps">Map</string>
     <string name="versus">VS</string>
+    <string name="next_game_date">Next game date</string>
+    <string name="show_on_map">Show on map</string>
+    <string name="our_latest_news">Our latest news</string>
+    <string name="goals_against">GA</string>
 </resources>
